# simulink-mcp

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  install.bat  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
simulink_mcp/: __init__.py  __main__.py  app.py
simulink_mcp/tools/: __init__.py  inspection.py  model_management.py  modification.py  simulation.py
tools/: __init__.py  inspection.py  model_management.py  modification.py  simulation.py
